--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>HomeWork_1_Tsepa</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
+    <title>Chat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
